# chameleon-apps

./: .gitignore
applications/basic-example-01/: Makefile  README.md  basic-example-01.cpp
applications/cholesky/: build.sh  flags_chameleon-intel.def  flags_chameleon-ompss.def  flags_chameleon-target.def  flags_chameleon.def  flags_chameleon_manual.def  flags_intel.def  flags_ompss.def  run-tests.sh  timing.h  timing_override.h
applications/cholesky/common/: ch_common.c  ch_common.h
applications/cholesky/fine-deps/: Makefile
applications/cholesky/joseph/: flags_clang.def  timing.h
applications/cholesky/perrank-deps/: ch_ompss.c
applications/cholesky/pure-parallel/: Makefile  ch_ompss.c
applications/cholesky/riken/: Makefile  main.c  mpi_rput_task_comm_thread.c  mpi_sr_chameleon_v1.c  mpi_sr_parallel.c  mpi_sr_task.c  mpi_sr_task_comm_thread.c
applications/cholesky/singlecom-deps/: Makefile  ch_ompss.c
applications/fortran_chameleon_testcase/: Makefile  fortran_testcase.f90
applications/fortran_compiler_support_testcase/: Makefile
applications/interference_app/: Makefile  dist.c
applications/matrix_example/: Makefile  chameleon  chameleon_scorep  collectData.sh  collectDataNU.sh  collectDataUNI.sh  collectDataUNI_likwid.sh  create_batchjobs.sh  export.sh  export_domain.sh  export_temporal.sh  export_tool.sh  matrix_example.cpp  matrix_example_api.cpp  matrix_example_api_1593097039_665242.input.cpp  matrix_example_likwid.h  mxm_all  mxm_chameleon  mxm_likwid  mxm_tasking  runBatch.sh  runMatrixBatch.sh  run_experiments.sh  tasking  tasking_scorep  testss  wrapper.sh
applications/matrix_example/testOutputs/: Test_No_Affinity_21253776  Test_No_Affinity_No_Numa_21256102  Test_No_Affinity_No_Numa_21256269  Test_No_Affinity_No_Numa_21274076  Test_No_Affinity_No_Numa_21274106  Test_With_Affinity_21252419  Test_With_Affinity_21253565  Test_With_Affinity_21253774  Test_With_Affinity_Fail1  Test_With_Affinity_Fail2  Test_With_Affinity_No_Numa_21256101  Test_With_Affinity_No_Numa_21256273  Test_With_Affinity_No_Numa_21274075  Test_With_Affinity_No_Numa_21274105
basic-example/: Makefile  README.md  basic-example.c  basic-example.cpp
basic-example-01/: basic-example-01.cpp
basic-example-02/: Makefile  basic-example-02.cpp
cholesky/joseph/: build.sh  flags_chameleon.def  flags_chameleon_manual.def  flags_clang.def  flags_intel.def  run-tests.sh  timing.h
cholesky/joseph/common/: ch_common.c  ch_common.h
cholesky/joseph/fine-deps/: Makefile
cholesky/joseph/perrank-deps/: Makefile
cholesky/joseph/pure-parallel/: Makefile  ch_ompss.c
cholesky/joseph/singlecom-deps/: Makefile  ch_ompss.c
cholesky/riken/: mpi_sr_task_joseph.c  omp_task.c
fortran_chameleon_testcase/: Makefile  fortran_testcase.f90
fortran_compiler_support_testcase/: fortran_testcase.f90
fortran_testcase/: fortran_testcase.f90
matrix_example/: Makefile  matrix_example.cpp  matrix_example_api.cpp
openmp-offload-helloworld/: Makefile  main.c  print_array.c  print_array.h
samoa_tool/: Makefile  samoa_tool.c
sample_tool/: Makefile  sample_tool.c
tool_loadbalancing_to_minimum/: tool.c
tool_samoa/: Makefile  tool_annotation_cells.c
tool_sample/: tool.c
tool_scaling_threshold/: tool.c
tools/tool_bottleneck_rank/: Makefile  tool.c
tools/tool_historical-load-per-kernel/: Makefile  tool.cpp  tool_stats_basic.cpp  tool_stats_per_kernel.cpp  tool_strat_only.cpp
tools/tool_hwc_measurements/: Makefile  evaluate_results.py  run_experiments.sh  run_experiments_micro_benchmarks.sh  tool.cpp
tools/tool_hwc_measurements/metric_calculation_wrapper/: likwid_metric_calculation.h
tools/tool_load_prediction/: README.md
tools/tool_load_prediction/chameleon_patch/: chameleon.cpp  chameleon_common.cpp  chameleon_common.h  chameleon_statistics.cpp  chameleon_statistics.h  chameleon_strategies.cpp  chameleon_tools.h  (+5 more)
tools/tool_load_prediction/src/: CMakeLists.txt  tool.cpp  tool.h
tools/tool_loadbalancing_to_minimum/: Makefile
tools/tool_noise/: Makefile  tool.c  tool.cpp  tool.h
tools/tool_noise_frequency/: Makefile  tool.c
tools/tool_noise_rr_frequency/: Makefile  tool.c
tools/tool_noise_wrong_predictions/: tool.c
tools/tool_papi_example/: Makefile  tool.c
tools/tool_prediction_model/: CMakeLists.txt  README.md  tool.cpp  tool.h
tools/tool_sample/: Makefile  README.md  tool.c
tools/tool_task_balancing/: Makefile  tool.cpp  tool_NU.cpp  tool_UNI.cpp  tool_likwid.h  tool_other.cpp
tools/tool_topo/: Makefile  settings.txt  tool.c  tool.cpp
tools/tool_wrong_predictions/: tool.c
tools/tool_wrong_predictions_multi_node/: tool.c
(+51 files in other folders)
